logs/jalon.pas.sygefor.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jalon'...
Listing './lib/python3.5/site-packages/jalon/pas'...
Listing './lib/python3.5/site-packages/jalon/pas/sygefor'...
Listing './lib/python3.5/site-packages/jalon/pas/sygefor/browser'...
Listing './lib/python3.5/site-packages/jalon/pas/sygefor/models'...
Compiling './lib/python3.5/site-packages/jalon/pas/sygefor/models/SygeForUser.py'...
***   File "./lib/python3.5/site-packages/jalon/pas/sygefor/models/SygeForUser.py", line 48
    print "------------------- check ---------------"
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jalon/pas/sygefor/plugin.py'...
***   File "./lib/python3.5/site-packages/jalon/pas/sygefor/plugin.py", line 88
    print "connexion"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jalon/pas/sygefor/plugins'...
Listing './lib/python3.5/site-packages/jalon.pas.sygefor-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
